Apply suggestion from @balloob

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -13,7 +13,7 @@ menu:
 {% endcomment %}
 {% capture full_title -%}
 {%- if title -%}
-{{ title }} – Sendspin Protocol
+{{ title }} – Sendspin
 {%- else -%}
 Sendspin: Music Experience Protocol
 {%- endif -%}
