Apply suggestions from code review

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -31,7 +31,7 @@ Sendspin: Music Experience Protocol
     <meta name="description" content="{{ description }}" />
     <meta name="viewport" content="width=device-width" />
     <meta property="og:title" content="{{ full_title }}" />
-    <meta property="og:site_name" content="Sendspin Protocol" />
+    <meta property="og:site_name" content="Sendspin" />
     <meta
       property="og:url"
       content="https://sendspin-audio.com{{ page.url | url }}"
@@ -71,7 +71,7 @@ Sendspin: Music Experience Protocol
 
       <div class="footer">
         <div>
-          Sendspin Protocol &nbsp; – &nbsp;
+          Sendspin &nbsp; – &nbsp;
           <a href="https://www.github.com/Sendspin">GitHub</a>
         </div>
       </div>
